--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Ready to Wise-Up?</h1>
+    <main>
+        <h1>Ready to Wise-Up?</h1>
     <h2>Tell us more about yourself to calculate your future.</h2>
 
 <section id="firstInput">
     <input id="firstName" placeholder="First Name">
-    <select placeholder="Select Your Future Career">
+    <select name="Select Your Future Career">
         <option></option>
     </select>
     <input placeholder="Target Graduation Year" type="date">
 </section>
     
-    <button id="CaluclateButton">Calculate My Future</button>
-
+    <button id="CalculateButton">Calculate My Future</button>
+</main>
+    
 
 </body>
 </html>
