Set a basic HTML
Added HTML to dahsboard.html and set up the CSS for it

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,16 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dashboard.css">
     <title>EECU Dashboard Page</title>
 </head>
 <body>
     <header>
-        <figure><img src="logo.png"></figure>
-
         <nav> 
+        <figure><img src="logo.png"></figure>
             <a href="#">Dashboard</a>
-              <a href="1">Budgeting</a>
+              <a href="#">Budgeting</a>
+              <a href="#"> Account</a>
         </nav>
     </header>
+    <main>
+        <h1>DashBoard</h1>
+            <span>
+<h2 id="budget"></h2>
+</span>
+            <span>
+<h3>Summer Gap Savings</h3>
+</span>
+            <span>
+<h3>In-Hand Salary</h3>
+<span>
+    <h4>Monthly Net Pay</h4>
+</span>
+ </span>
+            <span>
+<h3>Recent Transactions</h3>
+ </span>
+    </main>
+    <footer>
+        <img src="EECU-Budget-Tool-Footer 1.svg">
+    </footer>
 </body>
 </html>
